Fixed graph loading overlap

--- a/client/src/components/Loading/Loading.scss
+++ b/client/src/components/Loading/Loading.scss
@@ -27,3 +27,13 @@
     margin-right: auto;
   }
 }
+
+.loading-graph {
+  margin-bottom: 20px;
+
+  svg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
